crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_lifecycle_gas_snapshot_t6.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
cancel_bid_earn_credits:
  gas: 304741
  storage_credits: "user1: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
cancel_tail_bid_credits_predecessor_next:
  gas: 294241
  storage_credits: "user10: 0 -> 0; user9: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
create_pair:
  gas: 1293099
  storage_credits: n/a
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_ask_wallet:
  gas: 2348185
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_cross_user_after_cancel_credits:
  gas: 1851169
  storage_credits: "user7: 0 -> 0; user6: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_cross_user_after_fill_credits:
  gas: 1851169
  storage_credits: "user7: 0 -> 0; user4: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_reuse_cancel_credits:
  gas: 2075413
  storage_credits: "user1: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_reuse_predecessor_next_credit:
  gas: 1851169
  storage_credits: "user9: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_reuse_swap_credits:
  gas: 1828213
  storage_credits: "user3: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_bid_wallet:
  gas: 2595385
  storage_credits: "user1: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_flip_bid_wallet:
  gas: 2351043
  storage_credits: "user5: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
swap_exact_in_full_ask_earn_credits:
  gas: 384497
  storage_credits: "user3: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
swap_exact_in_full_flip_bid:
  gas: 890884
  storage_credits: "user5: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
swap_exact_in_partial_ask_no_credits:
  gas: 378785
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
swap_exact_out_full_ask_earn_credits:
  gas: 384677
  storage_credits: "user4: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
withdraw_internal_balance:
  gas: 54654
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
