crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_lifecycle_gas_snapshot_t8.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
cancel_bid_earn_credits:
  gas: 347041
  storage_credits: "user1: 0 -> 3"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 5"
cancel_head_bid_tracks_successor_prev:
  gas: 342741
  storage_credits: "user11: 0 -> 4; user12: 0 -> 1"
  pooled_storage_credits: "DEX TIP-1060: 24 -> 27"
cancel_tail_bid_credits_predecessor_next:
  gas: 342741
  storage_credits: "user10: 0 -> 4; user9: 0 -> 1"
  pooled_storage_credits: "DEX TIP-1060: 18 -> 21"
create_pair:
  gas: 1295799
  storage_credits: n/a
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_ask_wallet:
  gas: 1835985
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 7 -> 7"
place_bid_append_same_level:
  gas: 1341669
  storage_credits: "user16: 0 -> 0; user15: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 3 -> 3"
place_bid_cross_user_after_cancel_credits:
  gas: 1336769
  storage_credits: "user7: 0 -> 0; user6: 3 -> 3"
  pooled_storage_credits: "DEX TIP-1060: 7 -> 7"
place_bid_cross_user_after_fill_credits:
  gas: 1336769
  storage_credits: "user7: 0 -> 0; user4: 3 -> 3"
  pooled_storage_credits: "DEX TIP-1060: 14 -> 14"
place_bid_reuse_cancel_credits:
  gas: 850113
  storage_credits: "user1: 3 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 5 -> 3"
place_bid_reuse_predecessor_next_credit:
  gas: 1098169
  storage_credits: "user9: 1 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 21 -> 21"
place_bid_reuse_swap_credits:
  gas: 602813
  storage_credits: "user3: 3 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 12 -> 10"
place_bid_wallet:
  gas: 2083285
  storage_credits: "user1: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 0 -> 0"
place_flip_bid_wallet:
  gas: 1586743
  storage_credits: "user5: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 14 -> 14"
swap_exact_in_full_ask_earn_credits:
  gas: 388197
  storage_credits: "user3: 0 -> 3"
  pooled_storage_credits: "DEX TIP-1060: 8 -> 12"
swap_exact_in_full_flip_bid:
  gas: 885284
  storage_credits: "user5: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 14 -> 18"
swap_exact_in_full_head_bid_tracks_successor_prev:
  gas: 389685
  storage_credits: "user13: 0 -> 4; user14: 0 -> 1"
  pooled_storage_credits: "DEX TIP-1060: 21 -> 24"
swap_exact_in_partial_ask_no_credits:
  gas: 347385
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 7 -> 7"
swap_exact_out_full_ask_earn_credits:
  gas: 388377
  storage_credits: "user4: 0 -> 3"
  pooled_storage_credits: "DEX TIP-1060: 10 -> 14"
withdraw_internal_balance:
  gas: 49754
  storage_credits: "user2: 0 -> 0"
  pooled_storage_credits: "DEX TIP-1060: 7 -> 8"
