crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_order_gas_snapshots.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
cancel_tail_bid_order: 294241
place_bid_append_same_level: 1599985
place_bid_empty_level: 2582885
place_flip_ask_empty_level: 2585719
swap_exact_in_partial_bid_fill: 349485
swap_exact_out_full_flip_ask_fill: 644076
