crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_revert_gas_snapshot_t12.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
place_aggregate_overflow:
  gas: 842089
  status: true
swap_exact_out_accumulation_overflow:
  gas: 845528
  status: false
