crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_revert_gas_snapshot_t2.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
place_aggregate_overflow:
  gas: 341114
  status: false
swap_exact_out_accumulation_overflow:
  gas: 868708
  status: false
