crates/node/tests/it/gas/snapshots/it__gas__stablecoin_dex__stablecoin_dex_revert_gas_snapshot_t4.snap
---
source: crates/node/tests/it/gas/stablecoin_dex.rs
expression: gas
---
place_aggregate_overflow: 342714
swap_exact_out_accumulation_overflow: 870608
